Add housekeeping shift reporting (#93)
Closes #27
